--- a/templates/la.html
+++ b/templates/la.html
@@ -3,11 +3,11 @@
        "http://www.w3.org/TR/html4/transitional.dtd">
 <html>
   <head>
-    <title>MapServer Template Sample</title>
+    <title>Landskap</title>
   </head>
 
   <body>
-    MapServer Template Sample<br>
+    Landskap<br>
 
     <!-- The central form the application is based on. -->
     <form method="GET" action="[program]">
